--- a/лаба2/.github/workflows/docker-pipeline.yml
+++ b/лаба2/.github/workflows/docker-pipeline.yml
@@ -1,33 +1,33 @@
 name: Docker Pipeline
 
 on:
-  push:
-    branches:
-      - lab_docker
+  push
 
 jobs:
-  build-and-deploy:
+  build_and_publish:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      
+      - name: Login to GitHub Container Registry
+        run: docker login ghcr.io -u ${{ secrets.GH_NAME }} -p ${{ secrets.GH_PAT }}
+      
+      - name: Build Docker image
+        run: docker build . --tag ghcr.io/${{ secrets.DOCKER_NAME }}/modprog-project-ghcr:latest
+      
+      - name: Push Docker image to GitHub Container Registry
+        run: docker push ghcr.io/${{ secrets.DOCKER_NAME }}/modprog-project-ghcr:latest
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-      
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: Dockerfile
-        push: true
-        tags: ghcr.io/Mykola-Orlov/Postmodern-technologies:latest
-        labels: |
-            org.opencontainers.image.source="https://github.com/${{ github.repository }}/tree/${{ github.ref }}"
-      
-    - name: Run tests
-      run: |
-        docker run ghcr.io/${{ github.repository_owner }}/postmodern-technologies:latest pytest
-env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build Docker image (test)
+        run: docker build -t ghcr.io/${{ secrets.DOCKER_NAME }}/modprog-project-test:latest -f Dockerfile.test .
+
+      - name: Push test Docker image to GitHub Container Registry
+        run: docker push ghcr.io/${{ secrets.DOCKER_NAME }}/modprog-project-test:latest
+
+      - name: Run Docker container
+        run: docker run ghcr.io/${{ secrets.DOCKER_NAME }}/modprog-project-ghcr:latest
+
+      - name: Run tests in Docker container
+        run: docker run ghcr.io/${{ secrets.DOCKER_NAME }}/modprog-project-test:latest
