--- a/лаба2/Dockerfile
+++ b/лаба2/Dockerfile
@@ -1,21 +1,9 @@
-FROM python:3.9-slim
-
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    && rm -rf /var/lib/apt/lists/*
+FROM python:3.12
 
 WORKDIR /project
 
-COPY app /project/app
-COPY tests /project/tests
-COPY requirements.txt /project/
+ADD app/dumb_code.py .
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install psutil
 
-RUN pip install pytest
-
-ENV PYTHONPATH=/project
-
-LABEL org.opencontainers.image.source="https://github.com/Mykola-Orlov/Postmodern-technologies"
-
-CMD ["pytest"]
+CMD ["python", "./dumb_code.py"]
